<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHead">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Корпус X"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_360_75">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="322dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:text="адрес адрес"
            android:textSize="12pt"
            android:gravity="center"
            android:textColor="@color/colorDarkBlueText">
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="507dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/bg_360_507">

        <ImageButton
            android:id="@+id/imageButton18"
            android:onClick="onClick91"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_one"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:background="@color/colorList"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/floor1_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton19"
            android:onClick="onClick92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_two"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="90dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor2_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton20"
            android:onClick="onClick93"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_three"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="150dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor3_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton21"
            android:onClick="onClick94"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_four"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="210dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor4_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton22"
            android:onClick="onClick95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_five"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor5_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton23"
            android:onClick="onClick96"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_six"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="90dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor6_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton24"
            android:onClick="onClick97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_seven"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="150dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor7_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton25"
            android:onClick="onClick98"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_eight"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="210dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor8_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton26"
            android:onClick="onClick99"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_nine"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="270dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor9_descr">

        </ImageButton>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_marginVertical="60dp"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/dormitory"
            android:src="@drawable/seven_dormitory_1"/>

    </RelativeLayout>

</LinearLayout>