<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHead">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Корпус X"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_360_75">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="322dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:text="адрес адрес"
            android:textSize="12pt"
            android:gravity="center"
            android:textColor="@color/colorDarkBlueText">
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="507dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/bg_360_507">

        <ImageButton
            android:id="@+id/imageButton3"
            android:onClick="onClick60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_zero"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor0_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton4"
            android:onClick="onClick61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_one"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor1_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton5"
            android:onClick="onClick62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_two"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="135dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor2_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton6"
            android:onClick="onClick63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_three"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="195dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor3_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton7"
            android:onClick="onClick64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_four"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="255dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor4_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton8"
            android:onClick="onClick65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_five"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="315dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor5_descr"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_marginVertical="60dp"
            android:layout_width="285dp"
            android:layout_height="381dp"
            android:contentDescription="@string/building"
            android:src="@drawable/d_building_1"/>

    </RelativeLayout>

</LinearLayout>