<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHead">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Корпус X"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_360_75">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="322dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:text="адрес адрес"
            android:textSize="12pt"
            android:gravity="center"
            android:textColor="@color/colorDarkBlueText">
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="507dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/bg_360_507">

        <ImageButton
            android:id="@+id/imageButton14"
            android:onClick="onClick41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_one"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor1_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton15"
            android:onClick="onClick42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_two"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor2_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton16"
            android:onClick="onClick43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_three"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="135dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor3_descr">

        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton17"
            android:onClick="onClick44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floor_four"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="195dp"
            android:background="@color/colorList"
            android:contentDescription="@string/floor4_descr">
        </ImageButton>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_marginVertical="60dp"
            android:layout_width="270dp"
            android:layout_height="381dp"
            android:contentDescription="@string/building"
            android:src="@drawable/k_building_1"/>

    </RelativeLayout>

</LinearLayout>